<resources>
    <string name="app_name">s8113555 Assignment</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="culture">Culture</string>
    <string name="domain">Domain</string>
    <string name="symbol">Symbol</string>
    <string name="parentage">Parentage</string>
    <string name="romanEquivalent">Roman Equivalent</string>
</resources>